syntax = "proto3";

package gpu;

import "gpu/health.proto";

service Controller {
  rpc Attach(AttachReq) returns (AttachResp) {}
  rpc Detach(DetachReq) returns (DetachResp) {}

  rpc Freeze(FreezeReq) returns (FreezeResp) {}
  rpc Unfreeze(UnfreezeReq) returns (UnfreezeResp) {}

  rpc Dump(DumpReq) returns (DumpResp) {}
  rpc Restore(RestoreReq) returns (RestoreResp) {}
  rpc HealthCheck(HealthCheckReq) returns (HealthCheckResp) {}

  rpc Info(InfoReq) returns (InfoResp) {}
}

message AttachReq {
  string JID = 1;
}

message AttachResp {}

message DetachReq {}

message DetachResp {}

enum FreezeType {
  FREEZE_TYPE_IPC = 0;
  FREEZE_TYPE_NCCL = 1;
}

message FreezeReq {
  FreezeType Type = 1;
}

message FreezeResp {}

message UnfreezeReq {}

message UnfreezeResp {}

message DumpReq {
  string Dir = 1;
  bool Stream = 2;
  bool LeaveRunning = 3;
}

message DumpResp {}

message RestoreReq {
  string Dir = 1;
  bool Stream = 2;
}

message RestoreResp {
  RestoreStats RestoreStats = 1;
}

message RestoreStats {
  int64 CopyMemTime = 1; // in milliseconds
  int64 ReplayCallsTime = 2; // in milliseconds
  int64 CopyHostMemTime = 3; // in milliseconds
}

message InfoReq {}

message InfoResp {
  uint32 PID = 1; // PID of the controller process
  uint32 AttachedPID = 2; // PID of the process that is attached to the controller, 0 if none attached
  uint64 ShmSize = 3; // Size of the shared memory segment used for IPC
  string ShmName = 4; // Name of the shared memory segment used for IPC
  string Version = 5; // Version of the controller
}
