syntax = "proto3";

package plugins.apptainer;

message Apptainer {
  int32  PID = 1;
  bytes  JSONConfig = 2;
  bytes  OCIConfig = 3;
  string ContainerID = 4;
  string ImagePath = 5;
  string BundlePath = 6;
}

message QueryReq {
  repeated string ContainerIDs = 1;
}

message QueryResp {
  repeated Apptainer Containers = 1;
}
